DBZ-6726 Switch to ArrayList for repeated iteration